# gosam-contrib

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  gosam.conf.in  libtool  samurai.pc.in
avh_olo-2.2.1/: Makefile.am  Makefile.dep  Makefile.in  avh_olo_a0_a.h90  avh_olo_a0_b.h90  avh_olo_b0_a.h90  avh_olo_b0_b.h90  avh_olo_b11_a.h90  avh_olo_b11_b.h90  avh_olo_box.f90  avh_olo_boxc.f90  avh_olo_bub.f90  avh_olo_c0_a.h90  avh_olo_c0_b.h90  avh_olo_d0_a.h90  avh_olo_d0_b.h90  avh_olo_func.f90  avh_olo_kinds.f90  avh_olo_main.f90  avh_olo_print.f90  avh_olo_tri.f90  avh_olo_units.f90  avh_olo_wrp01.f90  avh_olo_xkind.f90  avh_olo_xkind.f90.in
avh_olo-3.6/: Makefile.am  Makefile.dep  Makefile.in  avh_olo.f90
avh_olo-3.6.1/: avh_olo.f90  avh_olo_xkind.f90.in
ff-2.0/: Makefile.am  Makefile.in  ffcel5.f  ffdel5.f  ffinit.f.in  ffxc1.f  ffxd0.f  ffxd0p.f
golem95-1.3.0/: Makefile.am  Makefile.in  MakefileCommon.am
golem95-1.3.0/form_factor/: Makefile.am  Makefile.dep  Makefile.in  form_factor_4p.f90
golem95-1.3.0/higherrank/: Makefile.am  Makefile.dep  Makefile.in  form_factor_higher_ranks.f90
golem95-1.3.0/integrals/: Makefile.in
golem95-1.3.0/integrals/four_point/: Makefile.am  Makefile.dep  Makefile.in  function_4p1m.f90  function_4p2m_adj.f90  function_4p2m_opp.f90  function_4p3m.f90  function_4p_ql12.f90  function_4p_ql16.f90
golem95-1.3.0/integrals/one_point/: Makefile.am  Makefile.dep  Makefile.in
golem95-1.3.0/integrals/three_point/: Makefile.am  Makefile.dep  Makefile.in  function_3p2m_1mi.f90  function_3p3m.f90  function_3p_finite.f90  mod_gn.f90  mod_hf.f90
golem95-1.3.0/integrals/two_point/: Makefile.am  Makefile.dep  Makefile.in  function_2p_m1m2.f90
golem95-1.3.0/interface/: Makefile.am  Makefile.dep  Makefile.in  gb0.f90  gf0.f90  tens_comb.f90  tensor_integrals.f90
golem95-1.3.0/kinematic/: Makefile.am  Makefile.dep  Makefile.in  inverse_matrice.f90  matrice_s.f90
golem95-1.3.0/module/: Makefile.dep  Makefile.in  form_factor_type.f90  kronecker.f90  parametre.f90  precision_golem.f90.in  sortie_erreur.f90  zdilog.f90
golem95-1.3.0/numerical/: Makefile.am  Makefile.dep  Makefile.in  mod_adapt_gauss.f90
golem95-1.3.2/: Makefile.in
golem95-1.3.2/form_factor/: Makefile.dep  Makefile.in  form_factor_5p.f90  form_factor_6p.f90
golem95-1.3.2/higherrank/: Makefile.am  Makefile.dep  Makefile.in
golem95-1.3.2/integrals/: Makefile.am  Makefile.in
golem95-1.3.2/integrals/one_point/: Makefile.am  Makefile.in
golem95-1.3.2/interface/: Makefile.am  (+3 more)
golem95-1.3.2/numerical/: Makefile.am  Makefile.dep  Makefile.in  mod_numeric.f90
golem95-1.3.3/: Makefile.am  MakefileCommon.am
golem95c-1.2.1/: Makefile.am  Makefile.in
golem95c-1.2.1/form_factor/: Makefile.am  Makefile.dep  Makefile.in  form_factor_3p.f90  form_factor_5p.f90
golem95c-1.2.1/higherrank/: Makefile.dep  Makefile.in  form_factor_higher_ranks.f90  generic_function_np.f90
golem95c-1.2.1/integrals/: Makefile.in
golem95c-1.2.1/integrals/four_point/: Makefile.am  Makefile.in  function_4p2m_3mi_onshell.f90  function_4p2m_adj.f90  function_4p4m.f90  function_4p_ql10.f90  function_4p_ql11.f90  function_4p_ql13.f90  function_4p_ql15.f90  function_4p_ql6.f90  function_4p_ql7.f90  function_4p_ql9.f90
golem95c-1.2.1/integrals/one_point/: Makefile.am  Makefile.dep  Makefile.in
golem95c-1.2.1/integrals/three_point/: Makefile.am  Makefile.dep  Makefile.in  function_3p0m_1mi.f90  function_3p1m.f90  function_3p1m_1mi.f90  function_3p1m_2mi.f90  function_3p2m.f90  function_3p2m_1mi.f90  function_3p3m.f90  function_3p_finite.f90  generic_function_3p.f90  mod_gn.f90  mod_h0.f90
golem95c-1.2.1/integrals/two_point/: Makefile.am  Makefile.dep  Makefile.in  function_2p_m1m2.f90  generic_function_2p.f90
golem95c-1.2.1/interface/: Makefile.am  Makefile.dep  Makefile.in  gb0.f90  gc0.f90  gd0.f90  tens_comb.f90  tens_rec.f90  tensor_integrals.f90  tool_lt_to_golem.f90
golem95c-1.2.1/kinematic/: Makefile.am  Makefile.dep  Makefile.in  inverse_matrice.f90
golem95c-1.2.1/module/: Makefile.am  Makefile.dep  Makefile.in  array.f90  cache.f90  cache_generic.f90  constante.f90  equal.f90  precision_golem.f90.in  s_matrix_type.f90  spinor.f90  tri.f90  z_log.f90  zdilog.f90
golem95c-1.2.1/numerical/: Makefile.am  Makefile.dep  Makefile.in
m4/: m4_ax_cxx_compile_stdcxx_11.m4  m4_cxx_flags_check.m4
ninja-1.0.0/: Makefile.am  Makefile.dep  Makefile.in  Xninja.cc  avholo_decls.hh  avholo_interface.cc  avholo_wrapper.F90  basis.cc  basis.hh  cuts_utils.hh  gosam_interface.cc  gosam_interface.hh  ninja.cc  ninja_hash_table.hh  ninja_implem.cxx  ninjago.F90  polys_implem.cxx  rambo.cc  spinors.cc  tmp_utils.hh
ninja-1.0.0/ninja/: Makefile.am  Makefile.in  avholo.hh  looptools.hh  momentum.hh  ninja.hh  ninja_config.h.in  ninja_in.hh  ninjanumgen.hh  quadruple.hh  rambo.hh  s_mat.hh  spinors.hh  static_arrays.hh  types.hh  zero_float.hh
ninja-1.1.0/: Makefile.am  avholo_interface.cc  basis.cc  ninja_implem.cxx  ninja_wraps.cc  rambo.cc  spinors.cc
ninja-1.2.0/: Makefile.am
qcdloop-1.9/: ChangeLog  Makefile.in
qcdloop-1.95/: Makefile.am  Makefile.in
samurai-2.1.1/: Makefile.am  Makefile.dep  Makefile.in  constants.f90  kinematic.f90  madds.f90.in  mcgs.f90  mfunctions.f90  mgetbase.f90  mgetc1.f90  mgetc2.f90  mgetc3.f90  mgetc4.f90  mgetc5.f90  mgetqs.f90  mglobal.f90  mrestore.f90  msamurai.f90.in  mtests.f90  options.f90  precision.f90.in  save.f90
samurai-2.9.0/: Makefile.am  Makefile.dep  Makefile.in  constants.f90  kinematic.f90  ltest.f90  madds.f90  mfunctions.f90  mgetc3.f90  mgetkin.f90  mgetqs.f90  mmasters.f90.in  mmisavholo.f90.in  mmisgolem.f90.in  mmisqcdloop.f90.in  mrestore.f90  msamurai.f90  mtens.f90  mtests.f90  ncuts.f90
samurai-2.9.1/: Makefile.am  Makefile.in  maccu.f90  madds.f90  mgetc1.f90  mgetc2.f90  mgetc4.f90  mgetc5.f90  mgetqs.f90  mglobal.f90  mmasters.f90.in  mmisavholo.f90.in  mmisgolem.f90.in  mmishighrank.f90  mmislooptools.f90.in  msamurai.f90  notfirst.f90  save.f90
(+50 files in other folders)
