lib_LTLIBRARIES=libavh_olo.la
libavh_olo_la_SOURCES= avh_olo.f90 avh_olo_xkind.f90

nodist_pkginclude_HEADERS=\
	avh_olo_dp_arrays.mod avh_olo_dp_auxfun.mod avh_olo_dp_bnlog.mod \
	avh_olo_dp_boxc.mod avh_olo_dp_box.mod avh_olo_dp_bub.mod avh_olo_dp_dilog.mod \
	avh_olo_dp_kinds.mod avh_olo_dp.mod avh_olo_dp_olog.mod avh_olo_dp_prec.mod \
	avh_olo_dp_print.mod avh_olo_dp_qmplx.mod avh_olo_dp_tri.mod avh_olo.mod \
	avh_olo_units.mod avh_olo_version.mod avh_olo_xkind.mod

CLEANFILES=$(nodist_pkginclude_HEADERS)

include Makefile.dep
