lib_LTLIBRARIES=libff.la
libff_la_SOURCES= \
   aaxbx.f aaxcx.f aaxdx.f aaxinv.f aacbc.f aaccc.f aacinv.f \
   spence.f npoin.f ff2dl2.f ffabcd.f ffca0.f ffcb0.f ffcb1.f \
   ffcb2p.f ffcdb0.f ffcc0.f ffcc0p.f ffcc1.f ffcel2.f ffcel3.f ffcel4.f \
   ffcel5.f ffceta.f ffcli2.f ffcrr.f ffcxr.f ffcxs3.f ffcxs4.f ffcxyz.f \
   ffdcc0.f ffdcxs.f ffdel2.f ffdel3.f ffdel4.f ffdel5.f ffdel6.f ffdl2i.f \
   ffdl5p.f ffdxc0.f ffinit.f ffrcvr.f fftran.f ffxb0.f ffxb1.f ffxb2p.f \
   ffxc0.f ffxc0i.f ffxc0p.f ffxc1.f ffxd0.f ffxd0h.f ffxd0i.f ffxd0p.f \
   ffxd1.f ffxdb0.f ffxdbd.f ffxdi.f ffxdpv.f ffxe0.f ffxe1.f ffxf0.f \
   ffxf0h.f ffxli2.f ffxxyz.f
#   ffcb2.f aaxex.f

dist_pkginclude_HEADERS= aa.h ff.h ffs.h

AM_FFLAGS=-I$(srcdir)

include Makefile.dep
